# twopercent

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  champion.json  pyproject.toml
.claude/: settings.json
.claude/agents/: builder.md  investigator.md  quant-skeptic.md  reviewer.md  strategy-researcher.md
.claude/skills/validate-new-strategy/: SKILL.md
.github/workflows/: ci.yml
research/: queue.json
src/twopercent/: backtest.py  champion.py  cli.py  compare.py  dashboard.py  doctor.py  features.py  generate.py  ingest.py  issues.py  notify.py  predict.py  research.py  routine.py  scan.py  store.py  track.py  universe.py
src/twopercent/strategies/: __init__.py  base.py  baseline_gbm.py  logreg.py  xgb_gbm.py
tests/: conftest.py  test_backtest.py  test_dashboard.py  test_doctor.py  test_features.py  test_generate.py  test_ingest.py  test_live_smoke.py  test_logreg.py  test_notify.py  test_predict.py  test_research.py  test_routine.py  test_routine_score.py  test_scan.py  test_store.py  test_strategies.py  test_tail_metrics.py  test_track.py  test_track_late.py  test_universe.py  test_xgb_gbm.py
