[project]
name = "twopercent"
version = "0.1.0"
description = "Scanner + ML predictor for +2% open-to-close US stock moves"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "pandas>=2.2",
    "requests>=2.32",
    "scikit-learn>=1.9.0",
    "typer>=0.15",
    "xgboost>=3.3.0",
    "yfinance>=0.2.50",
]

[project.scripts]
twopercent = "twopercent.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twopercent"]

[tool.pytest.ini_options]
addopts = "-q -m 'not live'"
markers = ["live: hits real network endpoints; run explicitly with -m live"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["twopercent", "tests"]
